2008-08-19  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/__glpk__.cc (F__glpk__): Checks whether LB and UB are
	of proper size.

	* oct-obj.cc, oct-obj.h (octave_value_list::make_argv): 
	Allow calling without fcn_name.
	* load-save.cc (parse_save_options (const string_vector&, ...)): 
	Return string_vector with parsed arguments removed instead.
	(parse_save_options (const std::string&, ...)):	Dtto.
	(Fsave): Fix calls to parse_save_options.

2008-08-19  John W. Eaton  <jwe@octave.org>

	* parse.y (Feval): Return value produced by evaluating CATCH string.

2008-08-12  John W. Eaton  <jwe@octave.org>

	* pt-fcn-handle.cc (tree_anon_fcn_handle::rvalue):
	Call stash_parent_function_scope for user function.
	* ov-fcn-inline.cc (octave_fcn_inline::octave_fcn_inline): 
	Likewise.

	* ov-struct.cc (octave_struct::subsref): Don't allow resizing for
	simple x(idx) case.

2008-08-07  John W. Eaton  <jwe@octave.org>

	* ov.cc (octave_value::idx_type_value): Don't include default
	argument values in definition.

	* src/glrender.h, src/zfstream.h: Don't include config.h.

	* oct-errno.h: Include <cerrno>.

	* Cell.cc, DLD-FUNCTIONS/regexp.cc, DLD-FUNCTIONS/dlmread.cc,
	debug.cc, error.cc, file-io.cc, graphics.cc, help.cc, input.cc,
	lex.l, load-path.cc, load-save.cc, ls-mat-ascii.cc,
	ls-oct-ascii.cc, oct-stream.cc, octave.cc, variables.cc,
	ov-fcn-handle.cc, parse.y, pr-output.cc, symtab.cc, sysdep.cc,
	utils.cc, graphics.h.in: Replace all uses of NPOS with
	std::string::npos.

	* ov.cc (octave_value::idx_type_value): Move definition here.
	* ov.h: From here.

	* DLD-FUNCTIONS/fsolve.cc (override_options): Don't fail if
	options_map does not contain an expected keyword.
	Fix typo in warning identifier.
	(make_unimplemented_options): Use CamelCase names here.

2008-08-06  Soren Hauberg  <hauberg@gmail.com>

	* error.cc (Ferror): Update format of error messages in exmple.
	* parse.y: (Feval): Likewise.

2008-08-06  John W. Eaton  <jwe@octave.org>
